--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body ng-app="beerCombosApp">
     <!--[if lt IE 7]>
@@ -76,10 +77,12 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <!-- <script src="scripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
+
+
 </body>
 </html>
