--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,11 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
-        <h3 class="text-muted">Beer Combos</h3>
+        <h2 class="text-muted">
+          bier one beer combinations<br>
+          <small>A calculator for computing the number of possible mixed beer combinations</small>
+        </h2>
+        
       </div>
 
       <div ng-view=""></div>
